# csv-analyzer

./: .gitignore  README.md  pyproject.toml
src/csv_analyzer/: analyzer.py  cli.py  models.py  reader.py  reporter.py
tests/: test_analyzer.py  test_reporter.py
tests/fixtures/: outlier_test.csv  sample.csv
