[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
csv-analyzer = "csv_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]